tests/fixtures/multi_module/valid/diamond/c.furqan
bismillah C {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: right
    not_scope: nothing_excluded
}

tanzil c_deps {
    depends_on: D
}

fn placeholder() -> Integrity {
    return Integrity
}
