tests/fixtures/multi_module/invalid/cycle/alpha.furqan
bismillah Alpha {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: first
    not_scope: nothing_excluded
}

tanzil alpha_deps {
    depends_on: Beta
}

fn placeholder() -> Integrity {
    return Integrity
}
